--- a/src/main/resources/templates/logoutForm.html
+++ b/src/main/resources/templates/logoutForm.html
@@ -7,6 +7,12 @@
           integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
 </head>
 <body>
-<h1>Welcome to Index PAGE!</h1>
+<div class="container">
+    <form class="form-signin w-50 mx-auto mt-4" th:method="POST" th:action="@{/logout}">
+        <h2 class="form-signin-heading">Are you sure you want to log out?</h2>
+        <input name="_csrf" type="hidden" value="e826a827-d1a5-4aca-bef0-23978ab868b7">
+        <button class="btn btn-lg btn-primary btn-block" type="submit">Log Out</button>
+    </form>
+</div>
 </body>
 </html>
