--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -5,6 +5,7 @@
     <title>Spring Security Example</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css"
           integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
+    <title>My Page</title>
 </head>
 <body>
 <div>
@@ -51,8 +52,8 @@
     </div>
 </div>
 <script>
-    const ADMIN_URL = 'http://localhost:8080/admin'
-    const USER_URL = 'http://localhost:8080/user'
+    const ADMIN_URL = '/admin'
+    const USER_URL = '/user'
 
     const navbarBrand = document.querySelector('.navbar-brand');
     const navbarRoles = document.getElementById('nav-roles');
@@ -278,9 +279,16 @@
                                                         <input class="form-control" name="salary" type="number"
                                                                id="salary" value="${u.salary}"/>
                                                     </div>
-
-                                                    <input name="username" value="${u.username}" hidden/>
-                                                    <input name="password" value="${u.password}" hidden/>
+                                                    <div class="form-group d-flex flex-column justify-content-center w-50 mx-auto">
+                                                        <label class="text-center font-weight-bold" for="username">username</label>
+                                                        <input class="form-control" name="username" type="text"
+                                                               id="username" value="${u.username}"/>
+                                                    </div>
+                                                    <div class="form-group d-flex flex-column justify-content-center w-50 mx-auto">
+                                                        <label class="text-center font-weight-bold" for="password">password</label>
+                                                        <input class="form-control" name="password" type="password"
+                                                               id="password" value="${u.password}"/>
+                                                    </div>
 
                                                     <div class="form-group d-flex flex-column justify-content-center w-50 mx-auto">
                                                         <label class="text-center font-weight-bold"
